--- a/src/app.html
+++ b/src/app.html
@@ -17,7 +17,7 @@
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
 	</head>
-  <body data-sveltekit-preload-data="hover" class="bg-slate-950  text-white relative">
+  <body data-sveltekit-preload-data="hover" class="bg-black text-white relative">
     <div style="display: contents"class="relative z-[1]">%sveltekit.body%</div>
 	<div class ="absolute min-h-screen top-0 left-0 w-full z-[-1] opacity-70">
 		<div class="absolute inset-0" id="particles-js"></div>
